# pytorch_advanced

./: .gitconfig  .gitignore  pyproject.toml
notebooks/1_image_classification/: 1-1_load_vgg.ipynb  1-3_transfer_learning.ipynb  1-5_fine_tuning.ipynb  1-5_fine_tuning_cpu.ipynb  make_folders_and_data_downloads.ipynb
notebooks/2_objectdetection/: .gitignore  0000.json  2-2-3_Dataset_DataLoader-Copy1.ipynb  2-2-3_Dataset_DataLoader.ipynb  2-2-3_Dataset_DataLoader_original.ipynb  2-4-5_SSD_model_forward.ipynb  2-6_loss_function.ipynb  2-7_SSD_training.ipynb  2-8_SSD_inference.ipynb  2-8_SSD_inference_appendix.ipynb  2-9.1_SSD_inference.ipynb  2-92_bounding_boxes.ipynb  2.9_2-2-3_Dataset_DataLoader.ipynb  2.9_2-7_SSD_training.ipynb  Untitled.ipynb  make_folders_and_data_downloads.ipynb  train_SSD.py
notebooks/2_objectdetection/data/: train_list.txt  val_list.txt
notebooks/2_objectdetection/utils/: ssd_model.py
pytorch_advanced/c01_vgg/: fine_tuning.py  transfer_learning.py
pytorch_advanced/c02_ssd/: annotations.py  data_augumentation.py  match.py  ssd_model.py  ssd_model_mob.py  train.py
